fixed wrapping issues, added ui for number of pegs and canvas resolution

--- a/style.css
+++ b/style.css
@@ -7,10 +7,22 @@ body
     height: calc(100vh - 16px);
 }
 
+button
+{
+    width: fit-content;
+    height: fit-content;
+}
+
 input[type="color"]
 {
     width: 30px;
     height: 30px;
+}
+
+.numberInput
+{
+    width: 40px;
+    appearance: textfield;
 }
 
 .popup
@@ -26,12 +38,6 @@ input[type="color"]
     grid-template-rows: 1fr auto 1fr;
     box-shadow: lightgray 0 0 5px 5px;
 
-}
-
-.popup > button
-{
-    width: fit-content;
-    height: fit-content;
 }
 
 .popup > *
@@ -71,11 +77,9 @@ input[type="color"]
     background-image: url("icons8-bin-32.png");
 }
 
-#dvMain
+#btnApplyVisualSettings
 {
-    display: grid;
-    grid-template-columns: 1fr 70% 1fr;
-    height: 100%;
+    margin-top: 3%;
 }
 
 #cnvMain
@@ -83,6 +87,20 @@ input[type="color"]
     height: min(100%, 50vw);
     margin: auto;
     box-shadow: lightgray 0 0 5px 5px;
+}
+
+#dvBoardVisualSettings
+{
+    display: grid;
+    padding: 3%;
+    box-shadow: lightgray 0 0 2px 2px inset;
+}
+
+#dvMain
+{
+    display: grid;
+    grid-template-columns: 1fr 60% 1fr;
+    height: 100%;
 }
 
 #dvPopupBackground
@@ -120,8 +138,12 @@ input[type="color"]
 #dvSettings
 {
     display: grid;
-    grid-template-rows: 1fr;
     margin: 10px 0 10px 0;
+}
+
+#dvSettings > *
+{
+    margin-bottom: 2%;
 }
 
 #dvStringChainList
@@ -131,14 +153,10 @@ input[type="color"]
     padding: 5%;
 }
 
-#inpNumPegs
-{
-    width: 40px;
-}
-
 #pCredits
 {
     font-size: small;
+    margin-bottom: 0;
 }
 
 #pLeftAlign
@@ -151,6 +169,11 @@ input[type="color"]
 #pPrevStringTitle
 {
     text-align: center;
+}
+
+#spSaveButtons
+{
+    margin-top: 5%;
 }
 
 #taLoad
